fixed button spacing

--- a/Prototype/static/Main.css
+++ b/Prototype/static/Main.css
@@ -25,6 +25,7 @@ h2 {
 h3 {
 	text-align: left;
 	margin: 10px;
+	margin-bottom: 0px;
 	font-size: 24px;
 }
 
@@ -43,34 +44,28 @@ p{
 
 #HomeButton{
 	margin-left: 10px;
+	width:100%;
+	height:100%;
 	font-size: 30px;
-	text-align: center;
-	display: inline-block;
+	display: block;
 	background-color: white;
 	border-top: 2px solid black;
 	border-right: none;
 	border-bottom: 2px solid black;
 	border-left: 2px solid black;
-	padding-left: 337.5px;
-	padding-right: 337.5px;
-	padding-bottom: 5px;
-	padding-top: 5px;
-	margin-bottom: 15px;
+	margin-bottom: 5px;
 }
 
 #AboutButton{
 	font-size: 30px;
-	text-align: center;
-	display: inline-block;
+	width:100%;
+	height:100%;
+	display: block;
 	background-color: white;
 	border-top: 2px solid black;
 	border-right: 2px solid black;
 	border-bottom: 2px solid black;
 	border-left: none;
-	padding-left: 337.5px;
-	padding-right: 337.5px;
-	padding-bottom: 5px;
-	padding-top: 5px;
 	margin-bottom: 5px;
 }
 
@@ -100,6 +95,7 @@ p{
 	background-color: lightgreen;
 }
 #About {
+	border-radius: 5px;
 	position: absolute;
 	right: 0px;
 	left: 0%;
@@ -111,4 +107,12 @@ p{
 	padding: 10px 0;
 	text-align: center;
 	background-color: lightgreen;
+}
+
+#imagesTable{
+	width: 100%;
+}
+
+#imagesTable td {
+	border: 6px solid lightgreen;
 }
